lab6/1/src/main.output
Terminals unused in grammar

   DOT
   BREAK
   CONTINUE
   b_OR
   b_NOR
   b_NOT
   pre_SELF_ADD
   pre_SELF_SUB


状态 0 conflicts: 6 shift/reduce
状态 60 conflicts: 3 reduce/reduce
状态 175 conflicts: 2 shift/reduce


语法

    0 $accept: CompUnit $end

    1 CompUnit: %empty
    2         | CompUnit Func_Def
    3         | CompUnit Decl
    4         | Func_Def
    5         | Decl

    6 Decl: decl_stmt SEMICOLON

    7 Func_Def: Type MAIN LPAREN RPAREN LBRACE fake_1 statements RBRACE

    8 fake_1: %empty

    9 statements: statement
   10           | statements statement

   11 statement: SEMICOLON
   12          | decl_stmt SEMICOLON
   13          | assign_stmt SEMICOLON
   14          | IO_stmt SEMICOLON
   15          | if_else_while_for_stmt
   16          | RETURN INT_CONST SEMICOLON
   17          | LBRACE fake_2 statements RBRACE

   18 fake_2: %empty

   19 expr: ID
   20     | INT_CONST
   21     | CHAR
   22     | STRING
   23     | BOOL
   24     | LPAREN expr RPAREN
   25     | expr ADD expr
   26     | expr SUB expr
   27     | expr MUL expr
   28     | expr DIV expr
   29     | expr MOD expr
   30     | SUB expr
   31     | expr AND expr
   32     | expr OR expr
   33     | NOT expr
   34     | expr LESS_EQ expr
   35     | expr LESS_THAN expr
   36     | expr MORE_EQ expr
   37     | expr MORE_THAN expr
   38     | expr NOT_EQ expr
   39     | expr EQ expr

   40 decl_stmt: Type ID ASSIGN expr
   41          | Type ID
   42          | decl_stmt COMMA ID ASSIGN expr
   43          | decl_stmt COMMA ID
   44          | Type MUL ID ASSIGN b_AND expr
   45          | Type MUL ID
   46          | Type b_AND ID ASSIGN ID
   47          | array_decl

   48 assign_stmt: base_assign_stmt
   49            | ID ADD_ASSIGN expr
   50            | ID SUB_ASSIGN expr
   51            | ID MUL_ASSIGN expr
   52            | ID DIV_ASSIGN expr
   53            | expr SELF_ADD
   54            | expr SELF_SUB

   55 base_assign_stmt: ID ASSIGN expr
   56                 | ID ASSIGN base_assign_stmt

   57 IO_stmt: PRINTF LPAREN STRING COMMA O_expr RPAREN
   58        | PRINTF LPAREN STRING RPAREN
   59        | SCANF LPAREN STRING COMMA I_expr RPAREN

   60 O_expr: expr
   61       | O_expr COMMA expr

   62 I_expr: b_AND expr
   63       | I_expr COMMA b_AND expr

   64 if_else_while_for_stmt: if_else_stmt
   65                       | WHILE LPAREN expr RPAREN statement
   66                       | FOR LPAREN for_expr_1 SEMICOLON for_expr_2 SEMICOLON for_expr_3 RPAREN statement

   67 if_else_stmt: IF LPAREN expr RPAREN statement
   68             | IF LPAREN expr RPAREN statement ELSE statement
   69             | if_else_if ELSE statement

   70 if_else_if: IF LPAREN expr RPAREN statement ELSE_IF LPAREN expr RPAREN statement
   71           | if_else_if ELSE_IF LPAREN expr RPAREN statement

   72 for_expr_1: decl_stmt
   73           | assign_stmt
   74           | %empty

   75 for_expr_2: expr
   76           | %empty

   77 for_expr_3: assign_stmt
   78           | %empty

   79 Type: T_INT
   80     | T_CHAR
   81     | T_BOOL
   82     | T_STRING
   83     | T_VOID
   84     | CONST T_INT
   85     | CONST T_CHAR

   86 INT_CONST: INTEGER_H
   87          | INTEGER_D
   88          | INTEGER_O
   89          | INTEGER_B

   90 array_decl: Type ARRAY ASSIGN arr_assign_expr
   91           | Type ARRAY

   92 ARRAY: IDENTIFIER LMPAREN INTEGER_D RMPAREN
   93      | ARRAY LMPAREN INTEGER_D RMPAREN

   94 arr_assign_expr: LBRACE arr_element RBRACE

   95 arr_element: arr_ele
   96            | arr_element COMMA arr_ele

   97 arr_ele: INT_CONST
   98        | CHAR
   99        | STRING

  100 ID: IDENTIFIER
  101   | IDENTIFIER LMPAREN INTEGER_D RMPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 79 84
T_CHAR (259) 80 85
T_BOOL (260) 81
T_STRING (261) 82
T_VOID (262) 83
CONST (263) 84 85
ASSIGN (264) 40 42 44 46 55 56 90
ADD_ASSIGN (265) 49
SUB_ASSIGN (266) 50
MUL_ASSIGN (267) 51
DIV_ASSIGN (268) 52
EQ (269) 39
NOT_EQ (270) 38
LESS_THAN (271) 35
LESS_EQ (272) 34
MORE_THAN (273) 37
MORE_EQ (274) 36
AND (275) 31
OR (276) 32
NOT (277) 33
ADD (278) 25
SUB (279) 26 30
MUL (280) 27 44 45
DIV (281) 28
MOD (282) 29
SELF_ADD (283) 53
SELF_SUB (284) 54
SEMICOLON (285) 6 11 12 13 14 16 66
COMMA (286) 42 43 57 59 61 63 96
DOT (287)
LPAREN (288) 7 24 57 58 59 65 66 67 68 70 71
RPAREN (289) 7 24 57 58 59 65 66 67 68 70 71
LBRACE (290) 7 17 94
RBRACE (291) 7 17 94
LMPAREN (292) 92 93 101
RMPAREN (293) 92 93 101
IDENTIFIER (294) 92 100 101
INTEGER_H (295) 86
INTEGER_D (296) 87 92 93 101
INTEGER_O (297) 88
INTEGER_B (298) 89
CHAR (299) 21 98
BOOL (300) 23
STRING (301) 22 57 58 59 99
MAIN (302) 7
RETURN (303) 16
FOR (304) 66
WHILE (305) 65
IF (306) 67 68 70
ELSE (307) 68 69
ELSE_IF (308) 70 71
PRINTF (309) 57 58
SCANF (310) 59
BREAK (311)
CONTINUE (312)
b_OR (313)
b_NOR (314)
b_AND (315) 44 46 62 63
UMINUS (316)
b_NOT (317)
pre_SELF_ADD (318)
pre_SELF_SUB (319)
GET_ADDRESS (320)
POINTER (321)


Nonterminals, with rules where they appear

$accept (67)
    左： 0
CompUnit (68)
    左： 1 2 3 4 5, 右： 0 2 3
Decl (69)
    左： 6, 右： 3 5
Func_Def (70)
    左： 7, 右： 2 4
fake_1 (71)
    左： 8, 右： 7
statements (72)
    左： 9 10, 右： 7 10 17
statement (73)
    左： 11 12 13 14 15 16 17, 右： 9 10 65 66 67 68 69 70 71
fake_2 (74)
    左： 18, 右： 17
expr (75)
    左： 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39, 右： 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    42 44 49 50 51 52 53 54 55 60 61 62 63 65 67 68 70 71 75
decl_stmt (76)
    左： 40 41 42 43 44 45 46 47, 右： 6 12 42 43 72
assign_stmt (77)
    左： 48 49 50 51 52 53 54, 右： 13 73 77
base_assign_stmt (78)
    左： 55 56, 右： 48 56
IO_stmt (79)
    左： 57 58 59, 右： 14
O_expr (80)
    左： 60 61, 右： 57 61
I_expr (81)
    左： 62 63, 右： 59 63
if_else_while_for_stmt (82)
    左： 64 65 66, 右： 15
if_else_stmt (83)
    左： 67 68 69, 右： 64
if_else_if (84)
    左： 70 71, 右： 69 71
for_expr_1 (85)
    左： 72 73 74, 右： 66
for_expr_2 (86)
    左： 75 76, 右： 66
for_expr_3 (87)
    左： 77 78, 右： 66
Type (88)
    左： 79 80 81 82 83 84 85, 右： 7 40 41 44 45 46 90 91
INT_CONST (89)
    左： 86 87 88 89, 右： 16 20 97
array_decl (90)
    左： 90 91, 右： 47
ARRAY (91)
    左： 92 93, 右： 90 91 93
arr_assign_expr (92)
    左： 94, 右： 90
arr_element (93)
    左： 95 96, 右： 94 96
arr_ele (94)
    左： 97 98 99, 右： 95 96
ID (95)
    左： 100 101, 右： 19 40 41 42 43 44 45 46 49 50 51 52 55 56


State 0

    0 $accept: . CompUnit $end

    T_INT     shift, and go to state 1
    T_CHAR    shift, and go to state 2
    T_BOOL    shift, and go to state 3
    T_STRING  shift, and go to state 4
    T_VOID    shift, and go to state 5
    CONST     shift, and go to state 6

    T_INT     [reduce using rule 1 (CompUnit)]
    T_CHAR    [reduce using rule 1 (CompUnit)]
    T_BOOL    [reduce using rule 1 (CompUnit)]
    T_STRING  [reduce using rule 1 (CompUnit)]
    T_VOID    [reduce using rule 1 (CompUnit)]
    CONST     [reduce using rule 1 (CompUnit)]
    $default  reduce using rule 1 (CompUnit)

    CompUnit    转到状态 7
    Decl        转到状态 8
    Func_Def    转到状态 9
    decl_stmt   转到状态 10
    Type        转到状态 11
    array_decl  转到状态 12


State 1

   79 Type: T_INT .

    $default  reduce using rule 79 (Type)


State 2

   80 Type: T_CHAR .

    $default  reduce using rule 80 (Type)


State 3

   81 Type: T_BOOL .

    $default  reduce using rule 81 (Type)


State 4

   82 Type: T_STRING .

    $default  reduce using rule 82 (Type)


State 5

   83 Type: T_VOID .

    $default  reduce using rule 83 (Type)


State 6

   84 Type: CONST . T_INT
   85     | CONST . T_CHAR

    T_INT   shift, and go to state 13
    T_CHAR  shift, and go to state 14


State 7

    0 $accept: CompUnit . $end
    2 CompUnit: CompUnit . Func_Def
    3         | CompUnit . Decl

    $end      shift, and go to state 15
    T_INT     shift, and go to state 1
    T_CHAR    shift, and go to state 2
    T_BOOL    shift, and go to state 3
    T_STRING  shift, and go to state 4
    T_VOID    shift, and go to state 5
    CONST     shift, and go to state 6

    Decl        转到状态 16
    Func_Def    转到状态 17
    decl_stmt   转到状态 10
    Type        转到状态 11
    array_decl  转到状态 12


State 8

    5 CompUnit: Decl .

    $default  reduce using rule 5 (CompUnit)


State 9

    4 CompUnit: Func_Def .

    $default  reduce using rule 4 (CompUnit)


State 10

    6 Decl: decl_stmt . SEMICOLON
   42 decl_stmt: decl_stmt . COMMA ID ASSIGN expr
   43          | decl_stmt . COMMA ID

    SEMICOLON  shift, and go to state 18
    COMMA      shift, and go to state 19


State 11

    7 Func_Def: Type . MAIN LPAREN RPAREN LBRACE fake_1 statements RBRACE
   40 decl_stmt: Type . ID ASSIGN expr
   41          | Type . ID
   44          | Type . MUL ID ASSIGN b_AND expr
   45          | Type . MUL ID
   46          | Type . b_AND ID ASSIGN ID
   90 array_decl: Type . ARRAY ASSIGN arr_assign_expr
   91           | Type . ARRAY

    MUL         shift, and go to state 20
    IDENTIFIER  shift, and go to state 21
    MAIN        shift, and go to state 22
    b_AND       shift, and go to state 23

    ARRAY  转到状态 24
    ID     转到状态 25


State 12

   47 decl_stmt: array_decl .

    $default  reduce using rule 47 (decl_stmt)


State 13

   84 Type: CONST T_INT .

    $default  reduce using rule 84 (Type)


State 14

   85 Type: CONST T_CHAR .

    $default  reduce using rule 85 (Type)


State 15

    0 $accept: CompUnit $end .

    $default  接受


State 16

    3 CompUnit: CompUnit Decl .

    $default  reduce using rule 3 (CompUnit)


State 17

    2 CompUnit: CompUnit Func_Def .

    $default  reduce using rule 2 (CompUnit)


State 18

    6 Decl: decl_stmt SEMICOLON .

    $default  reduce using rule 6 (Decl)


State 19

   42 decl_stmt: decl_stmt COMMA . ID ASSIGN expr
   43          | decl_stmt COMMA . ID

    IDENTIFIER  shift, and go to state 26

    ID  转到状态 27


State 20

   44 decl_stmt: Type MUL . ID ASSIGN b_AND expr
   45          | Type MUL . ID

    IDENTIFIER  shift, and go to state 26

    ID  转到状态 28


State 21

   92 ARRAY: IDENTIFIER . LMPAREN INTEGER_D RMPAREN
  100 ID: IDENTIFIER .
  101   | IDENTIFIER . LMPAREN INTEGER_D RMPAREN

    LMPAREN  shift, and go to state 29

    $default  reduce using rule 100 (ID)


State 22

    7 Func_Def: Type MAIN . LPAREN RPAREN LBRACE fake_1 statements RBRACE

    LPAREN  shift, and go to state 30


State 23

   46 decl_stmt: Type b_AND . ID ASSIGN ID

    IDENTIFIER  shift, and go to state 26

    ID  转到状态 31


State 24

   90 array_decl: Type ARRAY . ASSIGN arr_assign_expr
   91           | Type ARRAY .
   93 ARRAY: ARRAY . LMPAREN INTEGER_D RMPAREN

    ASSIGN   shift, and go to state 32
    LMPAREN  shift, and go to state 33

    $default  reduce using rule 91 (array_decl)


State 25

   40 decl_stmt: Type ID . ASSIGN expr
   41          | Type ID .

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 41 (decl_stmt)


State 26

  100 ID: IDENTIFIER .
  101   | IDENTIFIER . LMPAREN INTEGER_D RMPAREN

    LMPAREN  shift, and go to state 35

    $default  reduce using rule 100 (ID)


State 27

   42 decl_stmt: decl_stmt COMMA ID . ASSIGN expr
   43          | decl_stmt COMMA ID .

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 43 (decl_stmt)


State 28

   44 decl_stmt: Type MUL ID . ASSIGN b_AND expr
   45          | Type MUL ID .

    ASSIGN  shift, and go to state 37

    $default  reduce using rule 45 (decl_stmt)


State 29

   92 ARRAY: IDENTIFIER LMPAREN . INTEGER_D RMPAREN
  101 ID: IDENTIFIER LMPAREN . INTEGER_D RMPAREN

    INTEGER_D  shift, and go to state 38


State 30

    7 Func_Def: Type MAIN LPAREN . RPAREN LBRACE fake_1 statements RBRACE

    RPAREN  shift, and go to state 39


State 31

   46 decl_stmt: Type b_AND ID . ASSIGN ID

    ASSIGN  shift, and go to state 40


State 32

   90 array_decl: Type ARRAY ASSIGN . arr_assign_expr

    LBRACE  shift, and go to state 41

    arr_assign_expr  转到状态 42


State 33

   93 ARRAY: ARRAY LMPAREN . INTEGER_D RMPAREN

    INTEGER_D  shift, and go to state 43


State 34

   40 decl_stmt: Type ID ASSIGN . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 54
    INT_CONST  转到状态 55
    ID         转到状态 56


State 35

  101 ID: IDENTIFIER LMPAREN . INTEGER_D RMPAREN

    INTEGER_D  shift, and go to state 57


State 36

   42 decl_stmt: decl_stmt COMMA ID ASSIGN . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 58
    INT_CONST  转到状态 55
    ID         转到状态 56


State 37

   44 decl_stmt: Type MUL ID ASSIGN . b_AND expr

    b_AND  shift, and go to state 59


State 38

   92 ARRAY: IDENTIFIER LMPAREN INTEGER_D . RMPAREN
  101 ID: IDENTIFIER LMPAREN INTEGER_D . RMPAREN

    RMPAREN  shift, and go to state 60


State 39

    7 Func_Def: Type MAIN LPAREN RPAREN . LBRACE fake_1 statements RBRACE

    LBRACE  shift, and go to state 61


State 40

   46 decl_stmt: Type b_AND ID ASSIGN . ID

    IDENTIFIER  shift, and go to state 26

    ID  转到状态 62


State 41

   94 arr_assign_expr: LBRACE . arr_element RBRACE

    INTEGER_H  shift, and go to state 47
    INTEGER_D  shift, and go to state 48
    INTEGER_O  shift, and go to state 49
    INTEGER_B  shift, and go to state 50
    CHAR       shift, and go to state 63
    STRING     shift, and go to state 64

    INT_CONST    转到状态 65
    arr_element  转到状态 66
    arr_ele      转到状态 67


State 42

   90 array_decl: Type ARRAY ASSIGN arr_assign_expr .

    $default  reduce using rule 90 (array_decl)


State 43

   93 ARRAY: ARRAY LMPAREN INTEGER_D . RMPAREN

    RMPAREN  shift, and go to state 68


State 44

   33 expr: NOT . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 69
    INT_CONST  转到状态 55
    ID         转到状态 56


State 45

   30 expr: SUB . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 70
    INT_CONST  转到状态 55
    ID         转到状态 56


State 46

   24 expr: LPAREN . expr RPAREN

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 71
    INT_CONST  转到状态 55
    ID         转到状态 56


State 47

   86 INT_CONST: INTEGER_H .

    $default  reduce using rule 86 (INT_CONST)


State 48

   87 INT_CONST: INTEGER_D .

    $default  reduce using rule 87 (INT_CONST)


State 49

   88 INT_CONST: INTEGER_O .

    $default  reduce using rule 88 (INT_CONST)


State 50

   89 INT_CONST: INTEGER_B .

    $default  reduce using rule 89 (INT_CONST)


State 51

   21 expr: CHAR .

    $default  reduce using rule 21 (expr)


State 52

   23 expr: BOOL .

    $default  reduce using rule 23 (expr)


State 53

   22 expr: STRING .

    $default  reduce using rule 22 (expr)


State 54

   25 expr: expr . ADD expr
   26     | expr . SUB expr
   27     | expr . MUL expr
   28     | expr . DIV expr
   29     | expr . MOD expr
   31     | expr . AND expr
   32     | expr . OR expr
   34     | expr . LESS_EQ expr
   35     | expr . LESS_THAN expr
   36     | expr . MORE_EQ expr
   37     | expr . MORE_THAN expr
   38     | expr . NOT_EQ expr
   39     | expr . EQ expr
   40 decl_stmt: Type ID ASSIGN expr .

    EQ         shift, and go to state 72
    NOT_EQ     shift, and go to state 73
    LESS_THAN  shift, and go to state 74
    LESS_EQ    shift, and go to state 75
    MORE_THAN  shift, and go to state 76
    MORE_EQ    shift, and go to state 77
    AND        shift, and go to state 78
    OR         shift, and go to state 79
    ADD        shift, and go to state 80
    SUB        shift, and go to state 81
    MUL        shift, and go to state 82
    DIV        shift, and go to state 83
    MOD        shift, and go to state 84

    $default  reduce using rule 40 (decl_stmt)


State 55

   20 expr: INT_CONST .

    $default  reduce using rule 20 (expr)


State 56

   19 expr: ID .

    $default  reduce using rule 19 (expr)


State 57

  101 ID: IDENTIFIER LMPAREN INTEGER_D . RMPAREN

    RMPAREN  shift, and go to state 85


State 58

   25 expr: expr . ADD expr
   26     | expr . SUB expr
   27     | expr . MUL expr
   28     | expr . DIV expr
   29     | expr . MOD expr
   31     | expr . AND expr
   32     | expr . OR expr
   34     | expr . LESS_EQ expr
   35     | expr . LESS_THAN expr
   36     | expr . MORE_EQ expr
   37     | expr . MORE_THAN expr
   38     | expr . NOT_EQ expr
   39     | expr . EQ expr
   42 decl_stmt: decl_stmt COMMA ID ASSIGN expr .

    EQ         shift, and go to state 72
    NOT_EQ     shift, and go to state 73
    LESS_THAN  shift, and go to state 74
    LESS_EQ    shift, and go to state 75
    MORE_THAN  shift, and go to state 76
    MORE_EQ    shift, and go to state 77
    AND        shift, and go to state 78
    OR         shift, and go to state 79
    ADD        shift, and go to state 80
    SUB        shift, and go to state 81
    MUL        shift, and go to state 82
    DIV        shift, and go to state 83
    MOD        shift, and go to state 84

    $default  reduce using rule 42 (decl_stmt)


State 59

   44 decl_stmt: Type MUL ID ASSIGN b_AND . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 86
    INT_CONST  转到状态 55
    ID         转到状态 56


State 60

   92 ARRAY: IDENTIFIER LMPAREN INTEGER_D RMPAREN .
  101 ID: IDENTIFIER LMPAREN INTEGER_D RMPAREN .

    ASSIGN     reduce using rule 92 (ARRAY)
    ASSIGN     [reduce using rule 101 (ID)]
    SEMICOLON  reduce using rule 92 (ARRAY)
    SEMICOLON  [reduce using rule 101 (ID)]
    COMMA      reduce using rule 92 (ARRAY)
    COMMA      [reduce using rule 101 (ID)]
    $default   reduce using rule 92 (ARRAY)


State 61

    7 Func_Def: Type MAIN LPAREN RPAREN LBRACE . fake_1 statements RBRACE

    $default  reduce using rule 8 (fake_1)

    fake_1  转到状态 87


State 62

   46 decl_stmt: Type b_AND ID ASSIGN ID .

    $default  reduce using rule 46 (decl_stmt)


State 63

   98 arr_ele: CHAR .

    $default  reduce using rule 98 (arr_ele)


State 64

   99 arr_ele: STRING .

    $default  reduce using rule 99 (arr_ele)


State 65

   97 arr_ele: INT_CONST .

    $default  reduce using rule 97 (arr_ele)


State 66

   94 arr_assign_expr: LBRACE arr_element . RBRACE
   96 arr_element: arr_element . COMMA arr_ele

    COMMA   shift, and go to state 88
    RBRACE  shift, and go to state 89


State 67

   95 arr_element: arr_ele .

    $default  reduce using rule 95 (arr_element)


State 68

   93 ARRAY: ARRAY LMPAREN INTEGER_D RMPAREN .

    $default  reduce using rule 93 (ARRAY)


State 69

   25 expr: expr . ADD expr
   26     | expr . SUB expr
   27     | expr . MUL expr
   28     | expr . DIV expr
   29     | expr . MOD expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | NOT expr .
   34     | expr . LESS_EQ expr
   35     | expr . LESS_THAN expr
   36     | expr . MORE_EQ expr
   37     | expr . MORE_THAN expr
   38     | expr . NOT_EQ expr
   39     | expr . EQ expr

    $default  reduce using rule 33 (expr)


State 70

   25 expr: expr . ADD expr
   26     | expr . SUB expr
   27     | expr . MUL expr
   28     | expr . DIV expr
   29     | expr . MOD expr
   30     | SUB expr .
   31     | expr . AND expr
   32     | expr . OR expr
   34     | expr . LESS_EQ expr
   35     | expr . LESS_THAN expr
   36     | expr . MORE_EQ expr
   37     | expr . MORE_THAN expr
   38     | expr . NOT_EQ expr
   39     | expr . EQ expr

    $default  reduce using rule 30 (expr)


State 71

   24 expr: LPAREN expr . RPAREN
   25     | expr . ADD expr
   26     | expr . SUB expr
   27     | expr . MUL expr
   28     | expr . DIV expr
   29     | expr . MOD expr
   31     | expr . AND expr
   32     | expr . OR expr
   34     | expr . LESS_EQ expr
   35     | expr . LESS_THAN expr
   36     | expr . MORE_EQ expr
   37     | expr . MORE_THAN expr
   38     | expr . NOT_EQ expr
   39     | expr . EQ expr

    EQ         shift, and go to state 72
    NOT_EQ     shift, and go to state 73
    LESS_THAN  shift, and go to state 74
    LESS_EQ    shift, and go to state 75
    MORE_THAN  shift, and go to state 76
    MORE_EQ    shift, and go to state 77
    AND        shift, and go to state 78
    OR         shift, and go to state 79
    ADD        shift, and go to state 80
    SUB        shift, and go to state 81
    MUL        shift, and go to state 82
    DIV        shift, and go to state 83
    MOD        shift, and go to state 84
    RPAREN     shift, and go to state 90


State 72

   39 expr: expr EQ . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 91
    INT_CONST  转到状态 55
    ID         转到状态 56


State 73

   38 expr: expr NOT_EQ . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 92
    INT_CONST  转到状态 55
    ID         转到状态 56


State 74

   35 expr: expr LESS_THAN . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 93
    INT_CONST  转到状态 55
    ID         转到状态 56


State 75

   34 expr: expr LESS_EQ . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 94
    INT_CONST  转到状态 55
    ID         转到状态 56


State 76

   37 expr: expr MORE_THAN . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 95
    INT_CONST  转到状态 55
    ID         转到状态 56


State 77

   36 expr: expr MORE_EQ . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 96
    INT_CONST  转到状态 55
    ID         转到状态 56


State 78

   31 expr: expr AND . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 97
    INT_CONST  转到状态 55
    ID         转到状态 56


State 79

   32 expr: expr OR . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 98
    INT_CONST  转到状态 55
    ID         转到状态 56


State 80

   25 expr: expr ADD . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 99
    INT_CONST  转到状态 55
    ID         转到状态 56


State 81

   26 expr: expr SUB . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 100
    INT_CONST  转到状态 55
    ID         转到状态 56


State 82

   27 expr: expr MUL . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 101
    INT_CONST  转到状态 55
    ID         转到状态 56


State 83

   28 expr: expr DIV . expr

    NOT         shift, and go to state 44
    SUB         shift, and go to state 45
    LPAREN      shift, and go to state 46
    IDENTIFIER  shift, and go to state 26
    INTEGER_H   shift, and go to state 47
    INTEGER_D   shift, and go to state 48
    INTEGER_O   shift, and go to state 49
    INTEGER_B   shift, and go to state 50
    CHAR        shift, and go to state 51
    BOOL        shift, and go to state 52
    STRING      shift, and go to state 53

    expr       转到状态 102
    INT_CONST  转到状态 55
    ID         转到状态 56


State 84

   29 expr: expr MOD . expr
